:bug:fix expirience bottom scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,11 @@ html.dark {
 	--line-color: rgba(255, 255, 255, 0.2);
 }
 
+html,
+body {
+	overflow-x: hidden;
+}
+
 .borderBlack {
 	@apply border border-black/10;
 }
